kibana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: log-elastic
spec:
  selector:
    app: kibana
  ports:
    - port: 5601
      targetPort: 5601
